src/parser.output
Grammaire

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: loop
    5     | op

    6 loop: LBRACKET stmts RBRACKET

    7 op: PRINT
    8   | READ
    9   | LEFT
   10   | RIGHT
   11   | UP
   12   | DOWN
   13   | PLUS
   14   | MINUS
   15   | MULT
   16   | DIV
   17   | NEUTRAL


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    PRINT <token> (258) 7
    READ <token> (259) 8
    LEFT <token> (260) 9
    RIGHT <token> (261) 10
    UP <token> (262) 11
    DOWN <token> (263) 12
    PLUS <token> (264) 13
    MINUS <token> (265) 14
    MULT <token> (266) 15
    DIV <token> (267) 16
    NEUTRAL <token> (268) 17
    LBRACKET <token> (269) 6
    RBRACKET <token> (270) 6


Non-terminaux, suivis des règles où ils apparaissent

    $accept (16)
        à gauche: 0
    program <instruction> (17)
        à gauche: 1
        à droite: 0
    stmts <instruction> (18)
        à gauche: 2 3
        à droite: 1 3 6
    stmt <instruction> (19)
        à gauche: 4 5
        à droite: 2 3
    loop <instruction> (20)
        à gauche: 6
        à droite: 4
    op <token> (21)
        à gauche: 7 8 9 10 11 12 13 14 15 16 17
        à droite: 5


État 0

    0 $accept: • program $end

    PRINT     décalage et aller à l'état 1
    READ      décalage et aller à l'état 2
    LEFT      décalage et aller à l'état 3
    RIGHT     décalage et aller à l'état 4
    UP        décalage et aller à l'état 5
    DOWN      décalage et aller à l'état 6
    PLUS      décalage et aller à l'état 7
    MINUS     décalage et aller à l'état 8
    MULT      décalage et aller à l'état 9
    DIV       décalage et aller à l'état 10
    NEUTRAL   décalage et aller à l'état 11
    LBRACKET  décalage et aller à l'état 12

    program  aller à l'état 13
    stmts    aller à l'état 14
    stmt     aller à l'état 15
    loop     aller à l'état 16
    op       aller à l'état 17


État 1

    7 op: PRINT •

    $défaut  réduction par utilisation de la règle 7 (op)


État 2

    8 op: READ •

    $défaut  réduction par utilisation de la règle 8 (op)


État 3

    9 op: LEFT •

    $défaut  réduction par utilisation de la règle 9 (op)


État 4

   10 op: RIGHT •

    $défaut  réduction par utilisation de la règle 10 (op)


État 5

   11 op: UP •

    $défaut  réduction par utilisation de la règle 11 (op)


État 6

   12 op: DOWN •

    $défaut  réduction par utilisation de la règle 12 (op)


État 7

   13 op: PLUS •

    $défaut  réduction par utilisation de la règle 13 (op)


État 8

   14 op: MINUS •

    $défaut  réduction par utilisation de la règle 14 (op)


État 9

   15 op: MULT •

    $défaut  réduction par utilisation de la règle 15 (op)


État 10

   16 op: DIV •

    $défaut  réduction par utilisation de la règle 16 (op)


État 11

   17 op: NEUTRAL •

    $défaut  réduction par utilisation de la règle 17 (op)


État 12

    6 loop: LBRACKET • stmts RBRACKET

    PRINT     décalage et aller à l'état 1
    READ      décalage et aller à l'état 2
    LEFT      décalage et aller à l'état 3
    RIGHT     décalage et aller à l'état 4
    UP        décalage et aller à l'état 5
    DOWN      décalage et aller à l'état 6
    PLUS      décalage et aller à l'état 7
    MINUS     décalage et aller à l'état 8
    MULT      décalage et aller à l'état 9
    DIV       décalage et aller à l'état 10
    NEUTRAL   décalage et aller à l'état 11
    LBRACKET  décalage et aller à l'état 12

    stmts  aller à l'état 18
    stmt   aller à l'état 15
    loop   aller à l'état 16
    op     aller à l'état 17


État 13

    0 $accept: program • $end

    $end  décalage et aller à l'état 19


État 14

    1 program: stmts •
    3 stmts: stmts • stmt

    PRINT     décalage et aller à l'état 1
    READ      décalage et aller à l'état 2
    LEFT      décalage et aller à l'état 3
    RIGHT     décalage et aller à l'état 4
    UP        décalage et aller à l'état 5
    DOWN      décalage et aller à l'état 6
    PLUS      décalage et aller à l'état 7
    MINUS     décalage et aller à l'état 8
    MULT      décalage et aller à l'état 9
    DIV       décalage et aller à l'état 10
    NEUTRAL   décalage et aller à l'état 11
    LBRACKET  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 1 (program)

    stmt  aller à l'état 20
    loop  aller à l'état 16
    op    aller à l'état 17


État 15

    2 stmts: stmt •

    $défaut  réduction par utilisation de la règle 2 (stmts)


État 16

    4 stmt: loop •

    $défaut  réduction par utilisation de la règle 4 (stmt)


État 17

    5 stmt: op •

    $défaut  réduction par utilisation de la règle 5 (stmt)


État 18

    3 stmts: stmts • stmt
    6 loop: LBRACKET stmts • RBRACKET

    PRINT     décalage et aller à l'état 1
    READ      décalage et aller à l'état 2
    LEFT      décalage et aller à l'état 3
    RIGHT     décalage et aller à l'état 4
    UP        décalage et aller à l'état 5
    DOWN      décalage et aller à l'état 6
    PLUS      décalage et aller à l'état 7
    MINUS     décalage et aller à l'état 8
    MULT      décalage et aller à l'état 9
    DIV       décalage et aller à l'état 10
    NEUTRAL   décalage et aller à l'état 11
    LBRACKET  décalage et aller à l'état 12
    RBRACKET  décalage et aller à l'état 21

    stmt  aller à l'état 20
    loop  aller à l'état 16
    op    aller à l'état 17


État 19

    0 $accept: program $end •

    $défaut  accepter


État 20

    3 stmts: stmts stmt •

    $défaut  réduction par utilisation de la règle 3 (stmts)


État 21

    6 loop: LBRACKET stmts RBRACKET •

    $défaut  réduction par utilisation de la règle 6 (loop)
